--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,5 @@ SQLAlchemy==1.4.0
 async-exit-stack==1.0.1
 async-generator==1.10
 psycopg2-binary==2.8.6
+validate-docbr==1.8.2
+email-validator==1.1.2
