--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,8 @@ async-generator==1.10
 psycopg2-binary==2.8.6
 validate-docbr==1.8.2
 email-validator==1.1.2
+python-jose==3.2.0
+cryptography==3.4.6
+passlib==1.7.4
+bcrypt==3.2.0
+python-multipart==0.0.5
